# aircable

./: AIRcable.bas  AIRcableSMDFastPairingGuide.md  BASIC_Tool.md  BitwiseOperations.md  Cable_Master.md  CommandLineOverSPP.md  CommandLineUsage.md  DUN_SPP.md  Filtered_Master.md  Filtered_Salve.md  GPS_Data_Logging.md  GenericI2Ccode.md  ImprovedSlave.md  Interactive_PIO.md  Listed_Master.md  Little_Slave.md  Micro_Slave.md  Mini_Master.md  PIOUsage.md  PreparserUsage.md  ProjectHome.md  Relay.md  Restrictive_Slave.md  SideBar.md  Tutorial_Index.md  changelog  jEdit_Tools.md  smsSender.md  vCard.md
AIRcableDevelTools/: actions.xml
Industrial_CableMaster/: AIRcable.bas
Industrial_CableSlave/: AIRcable.bas
Industrial_ServiceSlave/: AIRcable.bas
MaxQData/: AIRcable.bas
SMDServiceSlave/: AIRcable.bas
SerialOS_ServiceSlave/: AIRcable.bas
SerialSMD/: AIRcable.bas
USBServiceSlave/: AIRcable.bas
cable_replacment_code/: AIRcable.bas  Menu.txt  Menus.txt  text  text2
cable_replacment_code/seek/: AIRcable.bas  test.txt
cable_replacment_code/t/: AIRcable.bas
cable_replacment_code/t2/: AIRcable.bas  text2
esc-sj/: README
lcd_temp/obexftp-0.22/apps/: Makefile  Makefile.am  Makefile.in  obexftp_sdp.c  obexftpd.c
libmxml/: configure.in
nouart/: AIRcable.bas  changelog
oem/: AIRcable.bas
trunk/: AIRcable.bas  changelog
trunk/tester/mini/aircablemini_tester.kdevelop/src/: Makefile.am  Makefile.in  aircableOS.cpp  aircablemini_tester.cpp  main.cpp  scriptmini.txt
tunneling/: tunnel.sh
uart/: AIRcable.bas  changelog
universal_tester/: Makefile  aircableOS.h  aircableSerial.h  aircableUSB.cpp  qtabout.ui  qtaircablemainform.ui  qtaircablemainform.ui.h  tester.pro
uploader/: AIRcable.bas  config.txt  newconf.txt
wiki/: AIRcableSMDFastPairingGuide.wiki  BASIC_Tool.wiki  BitwiseOperations.wiki  Cable_Master.wiki  CommandLineOverSPP.wiki  CommandLineUsage.wiki  DUN_SPP.wiki  Filtered_Master.wiki  Filtered_Salve.wiki  GPS_Data_Logging.wiki  GenericI2Ccode.wiki  ImprovedSlave.wiki  Interactive_PIO.wiki  Listed_Master.wiki  Little_Slave.wiki  Micro_Slave.wiki  Mini_Master.wiki  PIOUsage.wiki  PreparserUsage.wiki  Relay.wiki  Restrictive_Slave.wiki  SideBar.wiki  TOCSensorSDK.wiki  Tutorial_Index.wiki  jEdit_Tools.wiki  smsSender.wiki  vCard.wiki
(+581 files in other folders)
